...
    <string name="brick_rotate_right">"Rotate right "</string>

    <!-- Looks bricks -->
    <string name="brick_set_look">Switch to look</string>
    <string name="brick_set_background">Set background</string>
    <string name="brick_set_size_to">Set size to</string>
    <string name="brick_change_size_by">Change size by</string>
    <string name="brick_hide">Hide</string>
    <string name="brick_show">Show</string>
    <string name="brick_set_transparency">"Set transparency "</string>
    <string name="brick_change_ghost_effect">"Change transparency "</string>
    <string name="brick_set_brightness">"Set brightness "</string>
    <string name="brick_change_brightness">"Change brightness "</string>
...
    <string name="brick_speak">Speak</string>
    <string name="brick_speak_default_value">"Hello!"</string>
    <!--  -->


    <!-- Control bricks -->
    <string name="brick_when_started">When program started</string>
    <string name="brick_when">When tapped</string>
    <string name="brick_wait">Wait</string>
    <string name="brick_when_nfc">When NFC</string>

    <plurals name="second_plural">
        <item quantity="one">"second "</item>
...
    <string name="brick_if_begin_second_part">is true then</string>
    <string name="brick_if_else">Else</string>
    <string name="brick_if_end">End If</string>
    <string name="brick_broadcast_invalid_symbol">"Message reserved for:\n\"When physical collision between\"-Brick\nPlease try again!"</string>
    <string name="brick_set_variable">Set variable</string>
    <string name="brick_change_variable">Change variable</string>
    <string name="brick_variable_spinner_create_new_variable">New…</string>
    <string name="brick_note_default_value">"add comment here…"</string>
    <string name="brick_broadcast_default_value">"message 1"</string>
    <string name="brick_add_item_to_userlist_add">Add</string>
    <string name="brick_add_item_to_userlist">to list</string>
    <string name="brick_delete_item_from_userlist_delete">Delete item from list</string>
    <string name="brick_delete_item_from_userlist">at position</string>
...
    <string name="formula_editor_list_dialog_title">New List</string>
    <string name="formula_editor_dialog_for_all_sprites">For all objects</string>
    <string name="formula_editor_dialog_for_this_sprite_only">For this object only</string>
    <string name="formula_editor_data_dialog_hint">Enter name</string>
    <string name="formula_editor_discard_changes_dialog_message">Do you want to save your changes?</string>
    <string name="formula_editor_discard_changes_dialog_title">Save changes?</string>
    <string name="formula_editor_new_string_name">New text</string>
    <string name="formula_editor_new_string_dialog_hint">Enter new text here.</string>
    <string name="formula_editor_data_dialog_title">New</string>
    <string name="formula_editor_rename_variable_dialog_title">Rename</string>
    <string name="formula_editor_existing_data_item">Name already in use!</string>
    <string name="formula_editor_fragment_data_current_items">current items</string>
    <string name="formula_editor_data_dialog_is_list">Make it a list</string>
...
