...
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

...
    <string name="looks">Looks</string>
    <string name="sounds">Sounds</string>
    <string name="nfctags">NFC Tags</string>


    <!-- NewProjectDialog -->
    <string name="new_project_dialog_title">New project</string>
    <string name="new_project_empty">Create an empty project</string>
    <string name="new_project_default">Create an example project</string>
    <string name="new_project_default_drone">Create an example AR.Drone 2.0 project</string>
    <string name="new_project_default_jumping_sumo">Create an example Jumping Sumo project</string>
    <string name="project_orientation_title">Orientation:</string>
    <string name="project_select_screen_title">Screen:</string>
    <!--  -->

    <!-- NewMergedProjectDialog -->
    <string name="new_merge_project_dialog_title">Merged project</string>
    <string name="merging_project_text">These two projects cannot yet be merged</string>
...

    <!-- NewSpriteDialog -->
    <string name="new_sprite_dialog_title">New actor or object</string>
    <!--  -->

    <!-- NewLookDialog -->
    <string name="new_look_dialog_title">Add look</string>
    <string name="add_look_from_camera">Take picture</string>
    <string name="add_look_draw_new_image">Draw image</string>
    <string name="add_look_choose_image">Select image</string>
    <string name="add_look_media_library">Media library</string>
    <string name="add_look_drone_video">AR.Drone 2.0 video</string>
    <!--  -->
...
    <string name="brick_web_request_result">and store answer in</string>
    <string name="brick_web_request_default_value">https://official-joke-api.appspot.com/random_joke</string>
    <!--  -->

    <!-- Default Values -->
    <string name="default_project_name">My first project</string>
    <string name="default_scene_name">Scene %1$d</string>
    <string name="default_project_background_name">Background</string>
    <string name="default_project_cloud_name">Clouds</string>
    <string name="default_project_cloud_sprite_name_1">Clouds1</string>
    <string name="default_project_cloud_sprite_name_2">Clouds2</string>
    <string name="default_project_sprites_animal_name">Animal</string>
    <string name="default_project_sprites_animal_wings_up">Wings up</string>
...
